--- a/users/templates/users/passwordReset.html
+++ b/users/templates/users/passwordReset.html
@@ -8,6 +8,7 @@
             <center><h1>Reset Password</h1></center>
             <div class="content-section">
                 <form  method="post">
+                    {% csrf_token %}
                     <label for="email">Enter email: </label>
                     <input id="email" type="text" name="name_field">
                     <input type="submit" value="Request Reset">
